src/objects/BT_CO_LEG2SF_Log__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DML_Status__c</fullName>
        <label>DML Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32128</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_ID__c</fullName>
        <label>Interface ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Record_Count__c</fullName>
        <label>Invalid Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Record_Count__c</fullName>
        <label>Total Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Record_Count__c</fullName>
        <label>Valid Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BT_CO_LEG2SF_Log</label>
    <nameField>
        <label>BT_CO_LEG2SF_Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_LEG2SF_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>